--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ migrate_working_dir/
 .pub/
 /build/
 
+
+# استثناء مفتاح الخدمة من التتبع
+# lib/secrets/service_account.json
+
 # Symbolication related
 app.*.symbols
 
