--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   googleapis_auth: ^2.0.0
   googleapis: ^14.0.0
   flutter_launcher_icons: ^0.13.1
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
